# tetriscli-c-project

./: CMakeLists.txt  Example.txt  GameExample.txt
include/: game.h  gamekeyboard.h  gamesave.h  gamewindow.h  windowcli.h
src/: gamekeyboard.c  gamesave.c  gamewindow.c  main.c  windowcli.c
